Dismiss button - always on + move to top of panel
- js: CollectNotices - do not remove dismiss-button
- css: dismiss button

--- a/css/admin_notices.css
+++ b/css/admin_notices.css
@@ -16,6 +16,7 @@
 #meta-link-notices-wrap > button.notice-dismiss {
     position: relative;
     display: flex;
+	width: 100%;
 }
 
 .notice_container{
