--- a/css/admin_notices.css
+++ b/css/admin_notices.css
@@ -50,3 +50,28 @@
 .notices-above-title .wrap > div.update-nag{
 	display: none;
 }
+
+#meta-link-notices .plugin-count {
+	display: inline-block;
+	/* vertical-align: top; */
+	box-sizing: border-box;
+	margin: 1px 0 -1px 2px;
+	padding: 0 5px;
+	min-width: 18px;
+	height: 18px;
+	border-radius: 9px;
+	background-color: #72aee6;
+	color: #fff;
+	font-size: 11px;
+	line-height: 1.6;
+	text-align: center;
+	z-index: 26;
+}
+
+#meta-link-notices .plugin-count.warning {
+	background-color: #dba617;
+}
+
+#meta-link-notices .plugin-count.error {
+	background-color: #d63638;
+}
