--- a/css/admin_notices.css
+++ b/css/admin_notices.css
@@ -34,3 +34,11 @@
 .notice_container > div.update-nag{
 	margin: 5px 12px 15px 12px !important; /* Override plugins custom css */
 }
+
+/* This should only be used if auto-collect/above-title is enabled */
+.notices-above-title .wrap > div.updated,
+.notices-above-title .wrap > div.error,
+.notices-above-title .wrap > div.notice,
+.notices-above-title .wrap > div.update-nag{
+	display: none;
+}
